--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,9 @@
       />
       <button class="button-search" type="submit">Search</button>
     </form>
-
+    <div class="cover-loading">
+      <div class="loader hidden"></div>
+    </div>
     <div class="container">
       <ul class="gallery"></ul>
     </div>
